# Kerbal-Gravity-Program

./: README.md  planets.json  pyproject.toml
basic_systems/: kerbal_sovler.py
basic_systems/cpp/: .gitignore  kerbal_solver.cpp
